--- a/example/index.html
+++ b/example/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
-    <link rel="stylesheet" href="/css/image-gallery.css"/>
-    <link rel="stylesheet" href="/app.css"/>
-    <title>React Image Gallery</title>
-  </head>
-  <body>
-    <div id="container"></div>
-    <script src="./example.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="//fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/image-gallery.css" />
+  <link rel="stylesheet" href="/app.css" />
+  <title>React Image Gallery</title>
+</head>
+
+<body>
+  <div id="container"></div>
+  <script src="./example.js"></script>
+</body>
+
 </html>
